resources patches removed from amonia ocean

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,13 +1,17 @@
 Config changes
-    - Add setting for enable/disable demolishers
-    + Add setting for vulcano size
-    + Add setting for vulcano frequenzy
+  - Add setting for enable/disable demolishers
+  + Add setting for vulcano size
+  + Add setting for vulcano frequenzy
 
 Cosmetic changes
-    + Remove grass from vulcanus tiles volcanic-folds and volcanic-folds-flat
-    + Restore big patches of trees. See: "also removes big patches of trees on map, but i would like to keep the forests"
-    - Add vulcanus / gleba cliffs. I think this is not easy to do...
+  - Add vulcanus / gleba cliffs. I think this is not easy to do...
+  - Increase verly slowly but up to inf the moisture towards the south
+  + Remove grass from vulcanus tiles volcanic-folds and volcanic-folds-flat
+  + Restore big patches of trees. See: "also removes big patches of trees on map, but i would like to keep the forests"
 
 Low Prio:
-    - Make that calcite patch behaves like nauvis ore
-    - Make that tungsten ore patch behaves like nauvis ore
+  ? Make that calcite patch behaves like nauvis ore
+  ? Make that tungsten ore patch behaves like nauvis ore
+  + remove north_offset and south_offset for aquilo and gleba and replace them for a similar function like starting_island local expression
+  - Add setting for having north and south pole (aquilo at north and gleba at south)
+  + for masks use code like "a > b" instead "if(a > b, 1, 0)"
