--- a/TODO.txt
+++ b/TODO.txt
@@ -7,8 +7,8 @@ Config changes
 Cosmetic changes
   ? Add promethium as ore
   + Add holmium ore - make it hard ore
-  - check technology tree
-    - Add Fulguran vault ruins, or unlock recycler by different method
+  + check technology tree
+    + Add Fulguran vault ruins, or unlock recycler by different method 
     + Unlock holmium processing by mining holmium ore
   + remove menu simulations
   + fix surface conditions for recipes
