removed vulcanus_enemy_base autoplace control

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.0.3
+Date: 2025-01-07
+  Bugfixes:
+    - Removed vulcanus_enemy_base autoplace control
+---------------------------------------------------------------------------------------------------
 Version: 0.0.2
-Date: 2025-01-06
+Date: 2025-01-07
   Bugfixes:
     - Removed some gleba water tiles, since there is no smooth transition towards nauvis water
 ---------------------------------------------------------------------------------------------------
