--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,14 @@
+Bug fixes:
+
+
 Config changes
   + Add setting for enable/disable demolishers (Already done by default)
   + Add setting for vulcano size
   + Add setting for vulcano frequenzy
   + Add space connection from nauvis to solar system edge
+  - Make incompatible with Naufulglebunusilo
+  - Make incompatible with Resource Spawner Overhaul
+  - Add description to settings
 
 Cosmetic changes
   ? Add promethium as ore
