--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.0.5
+Date: 2025-01-09
+  Bugfixes:
+    - Removed some research triggers that were needed to continue with fulgora items
+---------------------------------------------------------------------------------------------------
 Version: 0.0.4
 Date: 2025-01-09
   Features:
