--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.0.6
+Date: 2025-01-10
+  Bugfixes:
+    - Vulcanic rocks also provide calcite. This is needed for big mining drill
+---------------------------------------------------------------------------------------------------
 Version: 0.0.5
 Date: 2025-01-09
   Bugfixes:
