--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.0.8
+Date: 2025-01-15
+  Bugfixes:
+    - Updated holmium graphics with higher contrast.
+---------------------------------------------------------------------------------------------------
 Version: 0.0.7
 Date: 2025-01-14
   Features:
