--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.0.9
+Date: 2025-01-18
+  Bugfixes:
+    - Heating tower unlocked after concrete
+    - lithium processing is now unlockable
+---------------------------------------------------------------------------------------------------
 Version: 0.0.8
 Date: 2025-01-15
   Bugfixes:
