Removed some menu simulations which could crash the game

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.2
+Date: 2025-01-30
+  Bugfixes:
+    - Removed some menu simulations which could crash the game
+---------------------------------------------------------------------------------------------------
 Version: 0.1.1
 Date: 2025-01-19
   Bugfixes:
