--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.3
+Date: 2025-02-02
+  Bugfixes:
+    - Now the menu simulations are fixed for good
+---------------------------------------------------------------------------------------------------
 Version: 0.1.2
 Date: 2025-01-30
   Bugfixes:
