--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,10 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.3
+Date: 2025-02-19
+  Modding:
+    - Added space travel flag
+---------------------------------------------------------------------------------------------------
+Version: 0.1.3
 Date: 2025-02-02
   Bugfixes:
     - Now the menu simulations are fixed for good
