--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,10 @@
 ---------------------------------------------------------------------------------------------------
-Version: 0.1.3
+Version: 0.1.5
+Date: 2025-03-14
+  Changes:
+    - Gleba tiles absorb pollution
+---------------------------------------------------------------------------------------------------
+Version: 0.1.4
 Date: 2025-02-19
   Modding:
     - Added space travel flag
