Ores related to Nauvis will not spawn on snow or ice

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.6
+Date: 2025-03-21
+  Changes:
+    - Ores related to Nauvis will not spawn on snow or ice
+---------------------------------------------------------------------------------------------------
 Version: 0.1.5
 Date: 2025-03-14
   Changes:
