Started adding eon_ prefixes to noise functions and expressions

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.7
+Date: 2025-04-18
+  Changes:
+    - Gleba tiles are much more prevalent in the south
+---------------------------------------------------------------------------------------------------
 Version: 0.1.6
 Date: 2025-03-21
   Changes:
