--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.8
+Date: 2025-05-02
+  Bugfixes:
+    - Fixed some locale typo
+---------------------------------------------------------------------------------------------------
 Version: 0.1.7
 Date: 2025-04-18
   Changes:
