--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,9 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.8
-Date: 2025-05-02
+Date: 2025-05-09
   Bugfixes:
     - Fixed some locale typo
+    - Fixed compatibility with factorio 2.0.44 with new gleba decoratives
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.7
 Date: 2025-04-18
